# game-of-life

./: CMakeLists.txt  README.md  main.c
grid_samples/: beehive.txt  glider.txt  glider_gun.txt  line.txt  loaf.txt
